missing css fixed
missing css fixed

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dr. Victor Manuel Martínez Chamorro</title>
-  <link rel="stylesheet" href="static/style.css" />
+  <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
   <div class="container">
     <header>
-      <img src="static/Photo_Victor.jpg" alt="Victor Martínez" class="profile-img" />
+      <img src="static/img/Photo_Victor.jpg" alt="Victor Martínez" class="profile-img" />
       <h1>Dr. Victor Manuel Martínez Chamorro</h1>
       <p><strong>Email:</strong> <a href="mailto:vmmartinez@pol.una.py">vmmartinez@pol.una.py</a> |
          <strong>Phone:</strong> +595971545030</p>
-      <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=0K0qp-4AAAAJ&hl=es" target="_blank">Perfil</a></p>
+      <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=0K0qp-4AAAAJ&hl=es" target="_blank">Profile</a></p>
     </header>
 
     <section>
