--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <h2>Portfolio / Selected Projects</h2>
       <ul>
         <li><strong>Free white board:</strong> <a href="https://free-board.onrender.com" target="_blank">https://free-board.onrender.com</a></li>
-        <li><strong>Countdown Web App:</strong> <a href="https://countdown-site-0cyz.onrender.com" target="_blank">https://countdown-site-0cyz.onrender.com</a></li>
-        <li><strong>Random things:</strong> <a href="https://may-six.onrender.com" target="_blank">https://may-six.onrender.com</a></li>
+      <!--  <li><strong>Countdown Web App:</strong> <a href="https://countdown-site-0cyz.onrender.com" target="_blank">https://countdown-site-0cyz.onrender.com</a></li>
+        <li><strong>Random things:</strong> <a href="https://may-six.onrender.com" target="_blank">https://may-six.onrender.com</a></li>  -->
         <li><strong>Android Apps Repo:</strong> <a href="https://github.com/Chamiltoniano/Android-Apps" target="_blank">https://github.com/Chamiltoniano/Android-Apps</a></li>
       </ul>
     </section>
