App added to portfolio section
.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
         <li><strong>Random things:</strong> <a href="https://may-six.onrender.com" target="_blank">https://may-six.onrender.com</a></li>  -->
         <li><strong>Android Apps Repo:</strong> <a href="https://github.com/Chamiltoniano/Android-Apps" target="_blank">https://github.com/Chamiltoniano/Android-Apps</a></li>
       </ul>
+
+      <div class="project-details">
+  <h3>All Kinematics</h3>
+  <p>Collection of mobile apps developed with Java/Kotlin for educational and scientific purposes. Includes utilities, simulations, and custom UIs.</p>
+
+  <div class="gallery">
+    <img src="static/img/allkinematics/1.jpg" alt="App screenshot 1">
+    <img src="static/img/allkinematics/2.jpg" alt="App screenshot 2">
+    <img src="static/img/allkinematics/3.jpg" alt="App screenshot 3">
+    <img src="static/img/allkinematics/4.jpg" alt="App screenshot 4">
+    <img src="static/img/allkinematics/5.jpg" alt="App screenshot 5">
+    <img src="static/img/allkinematics/6.jpg" alt="App screenshot 6">
+    <img src="static/img/allkinematics/7.jpg" alt="App screenshot 7">
+    <img src="static/img/allkinematics/8.jpg" alt="App screenshot 8">
+    <!-- Agregá más imágenes según necesites -->
+  </div>
+</div>
+
     </section>
 
     <section>
@@ -38,10 +56,10 @@
       <p> See full list in <a href="https://scholar.google.com/citations?user=0K0qp-4AAAAJ&hl=es" target="_blank">Google Scholar</a></p>
     </section>
 
-    <section>
+  <!--  <section>
       <h2>Research Projects</h2>
       <p>Including TWAS 2022, CONACYT 2022, and more since 2012.</p>
-    </section>
+    </section>    -->
 
     <section>
       <h2>Teaching Activities</h2>
