Another application added
Another application added

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <li><strong>Android Apps Repo:</strong> <a href="https://github.com/Chamiltoniano/Android-Apps" target="_blank">https://github.com/Chamiltoniano/Android-Apps</a></li>
       </ul>
 
-      <div class="project-details">
+ <div class="project-details">
   <h3>All Kinematics</h3>
-  <p>Collection of mobile apps developed with Java/Kotlin for educational and scientific purposes. Includes utilities, simulations, and custom UIs.</p>
+  <p>Android application in Java. Calculator for various kinematic phenomena of point objects, including uniform motion, accelerated motion, and projectile motion. For each case, position vs. time graphs are generated.</p>
 
   <div class="gallery">
     <img src="static/img/allkinematics/1.jpg" alt="App screenshot 1">
@@ -38,7 +38,23 @@
     <img src="static/img/allkinematics/6.jpg" alt="App screenshot 6">
     <img src="static/img/allkinematics/7.jpg" alt="App screenshot 7">
     <img src="static/img/allkinematics/8.jpg" alt="App screenshot 8">
-    <!-- Agregá más imágenes según necesites -->
+  </div>
+</div>
+
+ <div class="project-details">
+  <h3>Matematica Financiera</h3>
+  <p>Android application in Java. Calculator for practical cases in financial mathematics, including simple interest, compound interest, annuities, and amortization tables using the French and German systems.</p>
+
+  <div class="gallery">
+    <img src="static/img/matematicafinanciera/1.jpg" alt="App screenshot 1">
+    <img src="static/img/matematicafinanciera/2.jpg" alt="App screenshot 2">
+    <img src="static/img/matematicafinanciera/3.jpg" alt="App screenshot 3">
+    <img src="static/img/matematicafinanciera/4.jpg" alt="App screenshot 4">
+    <img src="static/img/matematicafinanciera/5.jpg" alt="App screenshot 5">
+    <img src="static/img/matematicafinanciera/6.jpg" alt="App screenshot 6">
+    <img src="static/img/matematicafinanciera/7.jpg" alt="App screenshot 7">
+    <img src="static/img/matematicafinanciera/8.jpg" alt="App screenshot 8">
+    <img src="static/img/matematicafinanciera/9.jpg" alt="App screenshot 9">
   </div>
 </div>
 
