Another app added
Another app added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
       </ul>
 
  <div class="project-details">
+  <h3>Analytic Geometry</h3>
+  <p>Android application in Java. Returns the explicit, canonical, and general equations of conic sections—line, circle, parabola, ellipse, and hyperbola. It also generates graphs for each curve. Initial data is provided according to each case.</p>
+
+  <div class="gallery">
+    <img src="static/img/analyticgeometry/1.jpg" alt="App screenshot 1">
+    <img src="static/img/analyticgeometry/2.jpg" alt="App screenshot 2">
+    <img src="static/img/analyticgeometry/3.jpg" alt="App screenshot 3">
+    <img src="static/img/analyticgeometry/4.jpg" alt="App screenshot 4">
+    <img src="static/img/analyticgeometry/5.jpg" alt="App screenshot 5">
+    <img src="static/img/analyticgeometry/6.jpg" alt="App screenshot 6">
+    <img src="static/img/analyticgeometry/7.jpg" alt="App screenshot 7">
+  </div>
+</div> 
+
+ <div class="project-details">
   <h3>All Kinematics</h3>
   <p>Android application in Java. Calculator for various kinematic phenomena of point objects, including uniform motion, accelerated motion, and projectile motion. For each case, position vs. time graphs are generated.</p>
 
