--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </header>
 
     <section>
-      <h2>Portfolio / Selected Projects</h2>
+      <h2>Portfolio / Selected Web and App Projects</h2>
       <ul>
-        <li><strong>Free white board:</strong> <a href="https://free-board.onrender.com" target="_blank">https://free-board.onrender.com</a></li>
+        <li><strong>Free white board:</strong><br>A free white board to write, change colors, eraser, save and print option and a simple calculator.<br> <a href="https://free-board.onrender.com" target="_blank">https://free-board.onrender.com</a></li>
       <!--  <li><strong>Countdown Web App:</strong> <a href="https://countdown-site-0cyz.onrender.com" target="_blank">https://countdown-site-0cyz.onrender.com</a></li>
         <li><strong>Random things:</strong> <a href="https://may-six.onrender.com" target="_blank">https://may-six.onrender.com</a></li>  -->
-        <li><strong>Android Apps Repo:</strong> <a href="https://github.com/Chamiltoniano/Android-Apps" target="_blank">https://github.com/Chamiltoniano/Android-Apps</a></li>
+        <li><strong>Android Apps Repo:</strong><br>Public GitHub repository with APKs and source code of Android apps built with Java (2019–2022).<br><a href="https://github.com/Chamiltoniano/Android-Apps" target="_blank">https://github.com/Chamiltoniano/Android-Apps</a></li>
       </ul>
-
+  <h4>I don't have any paid hosting or domain at the moment, so I can't show you any of my PWA projects. Instead, feel free to explore my best apps, which were published on the Google Play Store.</h4>
  <div class="project-details">
-  <h3>Analytic Geometry</h3>
+  <h3>Analytic Geometry</h2>
   <p>Android application in Java. Returns the explicit, canonical, and general equations of conic sections—line, circle, parabola, ellipse, and hyperbola. It also generates graphs for each curve. Initial data is provided according to each case.</p>
 
   <div class="gallery">
