--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <section>
       <h2>Teaching Activities</h2>
-      <p>Institutions: FPUNA, FaCEN, Columbia University, Uninter (2012–2024)</p>
+      <p>Institutions: FP-UNA(2012–present), FaCEN-UNA(2012), Columbia University (2021-present), Uninter (2021)</p>
     </section>
 
     <section>
