new webs added.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
 
     <div class="grid">
       <div class="card">
+        <img src="static/img/dna-tools/1.jpg" alt="Miniatura de DNA Tools">
+        <h3>DNA Tools</h3>
+        <p>Website that allows generating a PDB file of DNA molecules from a DNA sequence. It is possible to include data such as the torsional stress of the molecule and choose whether the molecule will be linear or circular..</p>
+        <button onclick="openModal('modalADNATools')">View More</button>
+      </div>
+
+     <div class="card">
+        <img src="static/img/dna-tools/1.jpg" alt="Miniatura de Free Board">
+        <h3>DNA Tools</h3>
+        <p>Website that allows generating a PDB file of DNA molecules from a DNA sequence. It is possible to include data such as the torsional stress of the molecule and choose whether the molecule will be linear or circular..</p>
+        <button onclick="openModal('modalFreeBoard')">View More</button>
+      </div>
+
+
+      <div class="card">
         <img src="static/img/analyticgeometry/1.jpg" alt="Miniatura de Analytic Geometry">
         <h3>Analytic Geometry</h3>
         <p>Returns the explicit, canonical, and general equations of conic sections and graphs.</p>
@@ -141,6 +156,30 @@
         <h3>Matematica Financiera</h3>
         <p>Calculators for interest, annuities, amortizations using French and German systems.</p>
         <button onclick="openModal('modalFinanciera')">View More</button>
+      </div>
+    </div>
+
+    <div id="modalADNATools" class="modal">
+      <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
+      <div class="modal-content">
+        <img src="static/img/dna-tools/1.jpg">
+        <img src="static/img/dna-tools/2.jpg">
+        <img src="static/img/dna-tools/3.jpg">
+        <img src="static/img/dna-tools/4.jpg">
+        <img src="static/img/dna-tools/5.jpg">
+        <img src="static/img/dna-tools/6.jpg">
+      </div>
+    </div>
+        
+    <div id="modalFreeBoard" class="modal">
+      <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
+      <div class="modal-content">
+        <img src="static/img/dna-tools/1.jpg">
+        <img src="static/img/dna-tools/2.jpg">
+        <img src="static/img/dna-tools/3.jpg">
+        <img src="static/img/dna-tools/4.jpg">
+        <img src="static/img/dna-tools/5.jpg">
+        <img src="static/img/dna-tools/6.jpg">
       </div>
     </div>
 
