--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
 
     <div class="grid">
       <div class="card">
-        <img src="static/img/dna-tools/1.jpg" alt="Miniatura de DNA Tools">
+        <img src="static/img/dna-tools/1.png" alt="Miniatura de DNA Tools">
         <h3>DNA Tools</h3>
         <p>Website that allows generating a PDB file of DNA molecules from a DNA sequence. It is possible to include data such as the torsional stress of the molecule and choose whether the molecule will be linear or circular..</p>
         <button onclick="openModal('modalADNATools')">View More</button>
       </div>
 
      <div class="card">
-        <img src="static/img/dna-tools/1.jpg" alt="Miniatura de Free Board">
-        <h3>DNA Tools</h3>
-        <p>Website that allows generating a PDB file of DNA molecules from a DNA sequence. It is possible to include data such as the torsional stress of the molecule and choose whether the molecule will be linear or circular..</p>
+        <img src="static/img/dna-tools/1.png" alt="Miniatura de Free Board">
+        <h3>Free Board</h3>
+        <p>Website offering a free whiteboard with various useful elements, brushes with different colors and thicknesses, a simple calculator option, screen save and reset functions, and a link to geogebra.com.</p>
         <button onclick="openModal('modalFreeBoard')">View More</button>
       </div>
 
@@ -162,24 +162,24 @@
     <div id="modalADNATools" class="modal">
       <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
       <div class="modal-content">
-        <img src="static/img/dna-tools/1.jpg">
-        <img src="static/img/dna-tools/2.jpg">
-        <img src="static/img/dna-tools/3.jpg">
-        <img src="static/img/dna-tools/4.jpg">
-        <img src="static/img/dna-tools/5.jpg">
-        <img src="static/img/dna-tools/6.jpg">
+        <img src="static/img/dna-tools/1.png">
+        <img src="static/img/dna-tools/2.png">
+        <img src="static/img/dna-tools/3.png">
+        <img src="static/img/dna-tools/4.png">
+        <img src="static/img/dna-tools/5.png">
+        <img src="static/img/dna-tools/6.png">
       </div>
     </div>
         
     <div id="modalFreeBoard" class="modal">
       <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
       <div class="modal-content">
-        <img src="static/img/dna-tools/1.jpg">
-        <img src="static/img/dna-tools/2.jpg">
-        <img src="static/img/dna-tools/3.jpg">
-        <img src="static/img/dna-tools/4.jpg">
-        <img src="static/img/dna-tools/5.jpg">
-        <img src="static/img/dna-tools/6.jpg">
+        <img src="static/img/dna-tools/1.png">
+        <img src="static/img/dna-tools/2.png">
+        <img src="static/img/dna-tools/3.png">
+        <img src="static/img/dna-tools/4.png">
+        <img src="static/img/dna-tools/5.png">
+        <img src="static/img/dna-tools/6.png">
       </div>
     </div>
 
