--- a/index.html
+++ b/index.html
@@ -162,24 +162,24 @@
     <div id="modalADNATools" class="modal">
       <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
       <div class="modal-content">
-        <img src="static/img/dna-tools/1.png">
-        <img src="static/img/dna-tools/2.png">
-        <img src="static/img/dna-tools/3.png">
-        <img src="static/img/dna-tools/4.png">
-        <img src="static/img/dna-tools/5.png">
-        <img src="static/img/dna-tools/6.png">
+        <img src="static/img/dna-tools/1.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/2.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/3.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/4.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/5.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/6.png" style="width: 200px; height: auto;">
       </div>
     </div>
         
     <div id="modalFreeBoard" class="modal">
       <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
       <div class="modal-content">
-        <img src="static/img/dna-tools/1.png">
-        <img src="static/img/dna-tools/2.png">
-        <img src="static/img/dna-tools/3.png">
-        <img src="static/img/dna-tools/4.png">
-        <img src="static/img/dna-tools/5.png">
-        <img src="static/img/dna-tools/6.png">
+        <img src="static/img/dna-tools/1.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/2.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/3.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/4.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/5.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/6.png" style="width: 200px; height: auto;">
       </div>
     </div>
 
