--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
       gap: 10px;
       justify-content: center;
     }
+
+  .modal-large .modal-content img {
+    width: 400px;
+    height: auto;
+    max-width: none;
+  }
+
     .modal-content img {
       max-width: 200px;
       border-radius: 5px;
@@ -159,20 +166,20 @@
       </div>
     </div>
 
-    <div id="modalADNATools" class="modal">
-      <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
+    <div id="modalADNATools" class="modal-large">
+      <span class="close" onclick="closeModal('modalADNATools')">&times;</span>
       <div class="modal-content">
-        <img src="static/img/dna-tools/1.png" style="width: 200px; height: auto;">
-        <img src="static/img/dna-tools/2.png" style="width: 200px; height: auto;">
-        <img src="static/img/dna-tools/3.png" style="width: 200px; height: auto;">
-        <img src="static/img/dna-tools/4.png" style="width: 200px; height: auto;">
-        <img src="static/img/dna-tools/5.png" style="width: 200px; height: auto;">
-        <img src="static/img/dna-tools/6.png" style="width: 200px; height: auto;">
+        <img src="static/img/dna-tools/1.png" >
+        <img src="static/img/dna-tools/2.png" >
+        <img src="static/img/dna-tools/3.png" >
+        <img src="static/img/dna-tools/4.png" >
+        <img src="static/img/dna-tools/5.png" >
+        <img src="static/img/dna-tools/6.png" >
       </div>
     </div>
         
-    <div id="modalFreeBoard" class="modal">
-      <span class="close" onclick="closeModal('modalAnalytic')">&times;</span>
+    <div id="modalFreeBoard" class="modal-large">
+      <span class="close" onclick="closeModal('modalFreeBoard')">&times;</span>
       <div class="modal-content">
         <img src="static/img/dna-tools/1.png" style="width: 200px; height: auto;">
         <img src="static/img/dna-tools/2.png" style="width: 200px; height: auto;">
