--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
     </div>
 
-    <div id="modalADNATools" class="modal-large">
+    <div id="modalADNATools" class="modal modal-large">
       <span class="close" onclick="closeModal('modalADNATools')">&times;</span>
       <div class="modal-content">
         <img src="static/img/dna-tools/1.png" >
@@ -178,7 +178,7 @@
       </div>
     </div>
         
-    <div id="modalFreeBoard" class="modal-large">
+<div id="modalFreeBoard" class="modal modal-large">
       <span class="close" onclick="closeModal('modalFreeBoard')">&times;</span>
       <div class="modal-content">
         <img src="static/img/dna-tools/1.png" style="width: 200px; height: auto;">
